force-app/main/default/objects/Apttus_Config2__IncentiveCoupon__c/Apttus_Config2__IncentiveCoupon__c.object-meta.xml
<CustomObject>
    <description>Represents a coupon associated with an incentive</description>
    <label>Incentive Coupon</label>
    <nameField>
        <displayFormat>CO-{000000}</displayFormat>
        <label>Coupon Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Coupons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>