force-app/main/default/objects/Apttus_Config2__IncentiveCoupon__c/fields/Apttus_Config2__AssignedToDimensionId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AssignedToDimensionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the dimension that identifies the assigned to data source</description>
    <inlineHelpText>ID of the dimension that identifies the assigned to data source</inlineHelpText>
    <label>Assigned To Dimension</label>
    <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
    <relationshipLabel>Incentive Coupons</relationshipLabel>
    <relationshipName>IncentiveCoupons</relationshipName>
    <type>Lookup</type>
</CustomField>