force-app/main/default/objects/Apttus_Config2__IncentiveCoupon__c/fields/Apttus_Config2__AssignedToID__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AssignedToID__c</fullName>
    <description>ID of the entity the coupon is assigned to</description>
    <inlineHelpText>ID of the entity the coupon is assigned to</inlineHelpText>
    <label>Assigned To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>