force-app/main/default/objects/Apttus_Config2__IncentiveCoupon__c/fields/Apttus_Config2__AssignedToType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AssignedToType__c</fullName>
    <description>Indicates the type of entity the coupon is assigned to</description>
    <inlineHelpText>Indicates the type of entity the coupon is assigned to</inlineHelpText>
    <label>Assigned To Type (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>