force-app/main/default/objects/Apttus_Config2__IncentiveCoupon__c/fields/Apttus_Config2__CouponCode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CouponCode__c</fullName>
    <description>The coupon code</description>
    <externalId>true</externalId>
    <inlineHelpText>The coupon code</inlineHelpText>
    <label>Coupon Code</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>