force-app/main/default/objects/Apttus_Config2__IncentiveCoupon__c/fields/Apttus_Config2__CouponLimit__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CouponLimit__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The number of times the coupon may be used.</description>
    <inlineHelpText>The number of times the coupon may be used.</inlineHelpText>
    <label>Coupon Limit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>