force-app/main/default/objects/Apttus_Config2__IncentiveCoupon__c/fields/Apttus_Config2__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExpirationDate__c</fullName>
    <description>The coupon expiration date. The coupon becomes ineffective after this date.</description>
    <inlineHelpText>The coupon expiration date. The coupon becomes ineffective after this date.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>