force-app/main/default/objects/Apttus_Config2__IncentiveCoupon__c/fields/Apttus_Config2__NumOfTimesUsed__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__NumOfTimesUsed__c</fullName>
    <description>The number of times the coupon is used. Will be used to track the remaining limit</description>
    <inlineHelpText>The number of times the coupon is used. Will be used to track the remaining limit</inlineHelpText>
    <label>Number Of Times Used</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>